--- a/WebBanHang.Application/appsettings.json
+++ b/WebBanHang.Application/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTConfig": {
+    "Issuer": "https://localhost:7150",
+    "Audience":  "https://localhost:7150"
+  },
   "AllowedHosts": "*"
 }
