--- a/WebBanHang.Application/appsettings.json
+++ b/WebBanHang.Application/appsettings.json
@@ -7,7 +7,8 @@
   },
   "JWTConfig": {
     "Issuer": "https://localhost:7150",
-    "Audience":  "https://localhost:7150"
+    "Audience": "https://localhost:7150",
+    "RefreshTokenTTL" : 2
   },
   "AllowedHosts": "*"
 }
