Commit 13-01-2024: - Implement email sign-up & verify - Implementing forgot password feature (in process)

--- a/WebBanHang.Application/appsettings.json
+++ b/WebBanHang.Application/appsettings.json
@@ -8,7 +8,14 @@
   "JWTConfig": {
     "Issuer": "https://localhost:7150",
     "Audience": "https://localhost:7150",
-    "RefreshTokenTTL" : 2
+    "RefreshTokenTTL": 2
+  },
+  "MailConfig": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "ixhn oomj jxhs uced",
+    "Mail": "biengioichantroi@gmail.com",
+    "DisplayName": "WinMail"
   },
   "AllowedHosts": "*"
 }
